Corrected Nav whitespace

--- a/dev/scss/_header.scss
+++ b/dev/scss/_header.scss
@@ -59,6 +59,10 @@ header {
                 li {
                     width: 100%;
                     background-color: rgba($brand-color, 0.7);
+                    
+                    a {
+                        white-space: nowrap;
+                    }
                 }
             }
 
